--- a/Tindog website using Bootstrap/css/styles.css
+++ b/Tindog website using Bootstrap/css/styles.css
@@ -1,17 +1,29 @@
 body{
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
+    
 }
 h1{
-    font-family:'Montserrat-black', sans-serif;
-    font-size:4rem;
+    font-family:'Montserrat-700', sans-serif;
+    /* font-size:4rem; */
     line-height:1.5;
 }   
 
+h3{
+    font-family: 'Montserrat-bold', sans-serif;
+}
 
+#features{
+    padding: 5% 15%;
+    font-weight: bold;
+}
 
 #title {
     background-color: #ff4c68;
     color: #fff;
+}
+.feature-div{
+    text-align: center;
+    padding: 5%;
 }
 
 .container-fluid{
