--- a/Tindog website using Bootstrap/css/styles.css
+++ b/Tindog website using Bootstrap/css/styles.css
@@ -4,14 +4,18 @@ body {
 }
 
 h1 {
-    font-family: 'Montserrat-Bold', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     /* font-size:4rem; */
     line-height: 1.5;
+    font-weight: 700;
 }
 
 h2{
     font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+    font-weight: 700;
+    padding: 4% 12%;
+    line-height: 1.5;
+    font-size: 3.2rem;
 }
 
 h3 {
@@ -32,19 +36,19 @@ h3 {
 #testimonials {
     background-color: #ef8172;
     color: #FFF;
-    padding: 5% 17%;
+    padding: 5% 7%;
     text-align: center;
 }
 #press{
     background-color: #ef8172;
     color: #FFF;
-    padding: 7% 7%;
+    padding-bottom: 3%;
     text-align: center;
 }
 .testi-img{
-    width: 20%;
+    width: 10%;
     border-radius: 100%;
-    padding: 20px 5px;
+    margin: 15px;
 }
 
 .feature-div {
@@ -52,8 +56,8 @@ h3 {
     padding: 5%;
 }
 .press-img{
-    width:20%;
-    padding: 20px 10px
+    width:15%;
+    padding: 20px 20px 50px;
 }
 .container-fluid {
     padding: 3% 10%;
