--- a/Tindog website using Bootstrap/css/styles.css
+++ b/Tindog website using Bootstrap/css/styles.css
@@ -36,7 +36,6 @@ h3 {
 #testimonials {
     background-color: #ef8172;
     color: #FFF;
-    padding: 5% 7%;
     text-align: center;
 }
 #press{
@@ -50,7 +49,9 @@ h3 {
     border-radius: 100%;
     margin: 15px;
 }
-
+.carousel-item{
+  padding: 5% 7%;
+}
 .feature-div {
     text-align: center;
     padding: 5%;
