--- a/Tindog website using Bootstrap/css/styles.css
+++ b/Tindog website using Bootstrap/css/styles.css
@@ -3,24 +3,37 @@ body {
 
 }
 
-h1 {
+h1,h2,h3,h4,h5,h6 {
     font-family: 'Montserrat', sans-serif;
-    font-size:4rem;
-    line-height: 1.5;
     font-weight: 750;
+
 }
 
 h2{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
     padding: 4% 12%;
-    line-height: 1.5;
-    font-size: 3.2rem;
+    line-height: 2.0;
+    font-size: 3.0rem;
 }
 
 h3 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 800;
+    line-height: 1.5;
+}
+
+/* Heading */
+
+.big-heading{
+    font-family: 'Montserrat', sans-serif;
+    font-size:3.5rem;
+    line-height: 1.5;
+    font-weight: 750;
+}
+
+.section-heading{
+    font-size: 3.5rem;
+    line-height: 1.5;
+    font-weight: 700;
 }
 
 #features {
@@ -41,6 +54,23 @@ h3 {
     color: #FFF;
     text-align: center;
 }
+
+.testimonial-text{
+    padding: 4% 12%;
+    line-height: 2.0;
+    font-size: 3.0rem;
+}
+
+.testi-img{
+    width: 10%;
+    border-radius: 100%;
+    margin: 15px;
+}
+
+.carousel-item{
+  padding: 5% 7%;
+}
+
 #press{
     background-color: #ef8172;
     color: #FFF;
@@ -53,20 +83,37 @@ h3 {
     text-align: center;
 }
 
+.price-text{
+    padding: 4% 12%;
+    font-weight: 702;
+    line-height: 1.5;
+    font-size: 2.5rem;
+}
+
 #cta{
     text-align: center;
+    color: #FFF;
+    background-color:#ff4c68;
+    padding: 7% 15% 4%;
 }
+
 #footer{
+    /* color: #FFF; */
     text-align: center;
+    padding: 7% 15% 4%;
+    /* background-color: #ff4c68; */
+    
 }
-.testi-img{
-    width: 10%;
-    border-radius: 100%;
-    margin: 15px;
+.cta-headline{
+    font-size: 3.5rem;
+    line-height: 1.5;
+    padding: 4% 10% 2%;
 }
-.carousel-item{
-  padding: 5% 7%;
+.social-icons{
+    margin: 30px 15px;
+    size: 20%;
 }
+
 .feature-div {
     text-align: center;
     padding: 5%;
@@ -112,6 +159,7 @@ h3 {
     width: 20%;
     transform: rotate(20deg);
     position: absolute;
+    right: 30%;
     
 }
 
@@ -128,8 +176,14 @@ h3 {
     color: #ff4c68;
 }
 
-@media (max-width:1111px) {
+@media (max-width: 1180px) {
+    #title{
+        text-align: center;
+    }
     .title-img{
         position: static;
+        width: 60%;
+        
+        transform: rotate(0);
     }
 }
