--- a/Tindog website using Bootstrap/css/styles.css
+++ b/Tindog website using Bootstrap/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-
+    text-align: center;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -15,11 +15,6 @@ h2{
     font-size: 3.0rem;
 }
 
-h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    line-height: 1.5;
-}
 
 /* Heading */
 
@@ -28,6 +23,7 @@ h3 {
     font-size:3.5rem;
     line-height: 1.5;
     font-weight: 750;
+    text-align: left;
 }
 
 .section-heading{
@@ -44,6 +40,22 @@ h3 {
     z-index: 1;
 }
 
+.feature-div {
+    padding: 5% 2%;
+}
+
+.feature-titles{
+    font-weight: 800;
+    line-height: 1.5;
+    font-size: 1.8rem;
+}
+
+.p-light-wt {
+    color: rgb(115, 114, 119);
+    font-size: 1.2rem;
+    line-height: 1.5;
+}
+
 #title {
     background-color: #ff4c68;
     color: #fff;
@@ -52,7 +64,6 @@ h3 {
 #testimonials {
     background-color: #ef8172;
     color: #FFF;
-    text-align: center;
 }
 
 .testimonial-text{
@@ -75,12 +86,10 @@ h3 {
     background-color: #ef8172;
     color: #FFF;
     padding-bottom: 3%;
-    text-align: center;
 }
 
 #pricing{
     padding: 7% 15%;
-    text-align: center;
 }
 
 .price-text{
@@ -99,7 +108,6 @@ h3 {
 
 #footer{
     /* color: #FFF; */
-    text-align: center;
     padding: 7% 15% 4%;
     /* background-color: #ff4c68; */
     
@@ -114,14 +122,11 @@ h3 {
     size: 20%;
 }
 
-.feature-div {
-    text-align: center;
-    padding: 5%;
-}
 .press-img{
     width:15%;
     padding: 20px 20px 50px;
 }
+
 .container-fluid {
     padding: 3% 15%;
 }
@@ -161,10 +166,6 @@ h3 {
     position: absolute;
     right: 30%;
     
-}
-
-.p-light-wt {
-    color: rgb(115, 114, 119);
 }
 
 .icon-fav {
